# synth303maker

./: .gitmodules  CMakeLists.txt  mingw-w64-x86_64.cmake  notes
.github/workflows/: build.yml  dpf-cmake-action.yml
src/: DistrhoPluginInfo.h  PluginDSP.cpp  PluginUI.cpp  synth303common.cpp  synth303common.hpp
